--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<meta http-equiv='cache-control' content='no-cache'> 
-<meta http-equiv='expires' content='0'> 
-<meta http-equiv='pragma' content='no-cache'>
-
+<!DOCTYPE html>
 <html lang="en" style="width:100%; height:100%;">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hyeongu Yun's CV</title>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/yhg0112/yhg0112/raw/main/HyeonguYun_CV_241220.pdf&embedded=true" style="width:100%; height:100%;"></iframe>
-  </body>
+<body style="width:100%; height:100%; margin:0;">
+  <iframe 
+    src="https://docs.google.com/gview?url=https://github.com/yhg0112/yhg0112/raw/main/HyeonguYun_CV_241220.pdf&embedded=true" 
+    style="width:100%; height:100%; border:none;" 
+    allowfullscreen>
+  </iframe>
+</body>
 </html>
