--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta charset="utf-8">
@@ -8,6 +8,23 @@
 <body style="width:100%; height:100%; margin:0;">
   <iframe 
     src="https://docs.google.com/gview?url=https://github.com/yhg0112/yhg0112/raw/main/HyeonguYun_CV_241220.pdf&embedded=true" 
+    style="width:100%; height:100%; border:none;" 
+    allowfullscreen>
+  </iframe>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en" style="width:100%; height:100%;">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hyeongu Yun's CV</title>
+</head>
+<body style="margin:0; width:100%; height:100%;">
+  <!-- PDF를 iframe으로 표시 -->
+  <iframe 
+    src="HyeonguYun_CV_241220.pdf" 
     style="width:100%; height:100%; border:none;" 
     allowfullscreen>
   </iframe>
